Massive overhaul for new styling.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -139,7 +139,7 @@ strong {
   font-weight: bold;
 }
 
-img {
+/*img {
   position: relative;
   margin: 0 auto;
   max-width: 739px;
@@ -152,7 +152,7 @@ img {
   -moz-box-shadow: 0 0 5px #ebebeb;
   -o-box-shadow: 0 0 5px #ebebeb;
   -ms-box-shadow: 0 0 5px #ebebeb;
-}
+}*/
 
 pre, code {
   width: 100%;
@@ -253,10 +253,10 @@ form {
   padding: 20px;
 }
 
-img {
+/*img {
   width: 100%;
   max-width: 100%;
-}
+}*/
 
 /*******************************************************************************
 Full-Width Styles
